--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@
 
 # produced vignettes
 vignettes/*.html
-vignettes/*.pdf
+#vignettes/*.pdf
 
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
@@ -40,7 +40,7 @@ vignettes/*.pdf
 .Renviron
 
 # pkgdown site
-docs/
+#docs/
 
 # translation temp files
 po/*~
